# retinalysis-vascx

./: .gitignore  MANIFEST.in  README.md  development.md  pyproject.toml  setup.cfg  setup.py  tox.ini
G_reco/fundus_sample/: fovea.csv  meta.csv
G_reco/model_inference/: environnement_test.yml  imageUtils.py
G_reco/scripts/: apply_reco.py  merge_av_masks.py  separate_av_masks.py
notebooks/: 0_preprocess.ipynb  1_segment_preprocessed.ipynb  2_feature_extraction.ipynb  3_normalize_features.ipynb  4_plot_feature_set.ipynb  utils.py
notebooks/faz/: feature_extraction.ipynb  feature_plots.ipynb  vessel_features.ipynb
notebooks/features/: bifurcations_angles.ipynb  bifurcations_points.ipynb  display_names.ipynb  feature_plots.ipynb  regions.ipynb  sparsity.ipynb  temporal_angles.ipynb  tortuosity.ipynb  vascular_densities.ipynb
notebooks/graph_analysis/: recursive_vessel_resolve.ipynb
notebooks/playground/: debug_splines.ipynb  intensity_profiles.ipynb  profile.ipynb  profile.py  pruning.ipynb  sknw.py
samples/fundus/: fovea.csv  meta.csv
tests/: conftest.py  regression_helpers.py  test_feature_plotting.py  test_feature_regression.py  test_pipeline_profile.py
tests/reference/: bergmann.meta.json  bergmann.parquet  full.meta.json  full.parquet  full_v2.meta.json  full_v2.parquet  full_v3.meta.json  full_v3.overrides.yaml  full_v3.parquet  od_centered.meta.json  od_centered.parquet  sparsity.meta.json  sparsity.parquet
vascx/: __init__.py  bifurcation.py  cli.py  diameters.py  io.py  layer.py  nodes.py  retina.py  segment.py  setup.py  splines.py
vascx/analysis/: aggregators.py  network.py  network_torch.py  segment_features.py  vessel_resolve.py
vascx/faz/: layer.py  retina.py
vascx/faz/feature_sets/: basic.py
vascx/faz/features/: base.py  bifurcations.py  caliber.py  faz_params.py  tortuosity.py  vascular_densities.py
vascx/feature_sets/: tortuosity.py
vascx/features/: base.py  bifurcations.py  caliber.py  cre.py  length.py  readme.txt  temporal_angles.py  tortuosity.py  vascular_densities.py
vascx/fundus/: __init__.py  layer.py  loader.py  retina.py  vessel_resolve.py  vessels_layer.py
vascx/fundus/feature_sets/: __init__.py  bergmann.py  calibers.py  full.py  full_v2.py  full_v3.py  od_centered.py  quality.py  sparsity.py  tortuosity.py
vascx/fundus/features/: base.py  bifurcation_angles.py  bifurcation_calibers.py  (+12 more)
vascx/inference/: __init__.py  inference.py  utils.py
vascx/metrics/: bifurcation_map.py
vascx/notebooks/: 0_preprocess.ipynb  1_segment_preprocessed.ipynb  2_feature_extraction.ipynb
vascx/shared/: aggregators.py  base.py  diameters.py  features.py  graph.py  masks.py  nodes.py  segment.py  splines.py  vessels.py
vascx/utils/: __init__.py  analysis.py  av_masks.py  eval.py  feature_docs.py  fundus.py  helpers.py  loader.py  plotting.py
vascx/vascx/: __init__.py  eval.py  layer.py  nodes.py  retina.py  segment.py  vessels.py
(+53 files in other folders)
