[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vascx"
dynamic = ["version"]
description = "Retinal analysis toolbox for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Jose Vargas", email = "j.vargasquiros@erasmusmc.nl" }]
requires-python = ">=3.10, <3.13"
dependencies = [
  "numpy == 2.*",
  "pandas == 2.*",
  "scikit-learn==1.*",
  "scipy == 1.*",
  "opencv-python == 4.*",
  "matplotlib==3.*",
  "joblib==1.*",
  "tqdm == 4.*",
  "typing_extensions == 4.*",
  "Pillow == 11.*",
  "click==8.*",
  "sknw==0.14",
  "sortedcontainers==2.4.0",
  "scikit-image == 0.24.0",
  "retinalysis-enface >= 1.0.0",
  "retinalysis-fundusprep"
]

[project.scripts]
vascx = "vascx.cli:cli"

[project.optional-dependencies]
test = [
  "pytest == 8.*",
  "pyarrow == 22.*",
  "PyYAML == 6.*"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["vascx*"]

[tool.pytest.ini_options]
markers = [
  "reference: regression tests for stored biomarker baselines",
  "profile: runtime profiling guards for the sample extraction pipeline",
  "plotting: smoke tests for feature plotting methods"
]
testpaths = ["tests"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

