[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vascx"
dynamic = ["version"]
description = "Retinal analysis toolbox for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Jose Vargas", email = "j.vargasquiros@erasmusmc.nl" }]
requires-python = ">=3.8, <3.15"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "opencv-python>=4,<5",
  "matplotlib>=3.7,<4",
  "joblib>=1,<2",
  "tqdm>=4,<5",
  "typing_extensions == 4.*",
  "Pillow>=10,<12",
  "click>=8,<9",
  "sknw==0.14",
  "sortedcontainers==2.4.0",
  "scikit-image>=0.21,<1",
  "retinalysis-enface >= 1.0.1",
  "retinalysis-fundusprep >= 0.6.1"
]

[project.scripts]
vascx = "vascx.cli:cli"

[project.optional-dependencies]
test = [
  "pytest == 8.*",
  "pyarrow >= 14",
  "PyYAML == 6.*"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["vascx*"]

[tool.pytest.ini_options]
markers = [
  "reference: regression tests for stored biomarker baselines",
  "profile: runtime profiling guards for the sample extraction pipeline",
  "plotting: smoke tests for feature plotting methods"
]
testpaths = ["tests"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

